@@ -2,6 +2,7 @@ PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
 DIST_VERSION = @DIST_VERSION@
+RPM_VERSION = @RPM_VERSION@
 
 MAJOR_VERSION = @MAJOR_VERSION@
 MINOR_VERSION = @MINOR_VERSION@
