@@ -30,6 +30,13 @@ DIST_FILES = \
 	install-sh	\
 	mkinstalldirs
 
+
+rhas_srpm: dist
+	rpm -bs --define "_sourcedir $(TOPDIR)" --define "_srcrpmdir $(TOPDIR)" "$(TOPDIR)/redhat/osm-2.4.9-e.spec"
+
+rhas_rpm: rhas_srpm
+	rpm --rebuild --target i686 "osm-2.4.9-e-$(DIST_VERSION)-$(RPM_VERSION).src.rpm"
+
 #
 # Include this at the very end of the Makefile
 #
