@@ -31,6 +31,10 @@ AC_SUBST(VERSION)
 DIST_VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 AC_SUBST(DIST_VERSION)
 
+# Bump this only to update the RPM package version
+RPM_VERSION=1
+AC_SUBST(RPM_VERSION)
+
 AC_CANONICAL_HOST
 
 AC_PROG_CC
